--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.58.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
