--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build Docker Images
-        run: docker-compose build
+        run: docker compose build
